# bot_framework

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/deploy/: SKILL.md
bot_framework/: __init__.py
bot_framework/app/: __init__.py  bot_application.py
bot_framework/base_protocols/: __init__.py  create.py  delete.py  get_all.py  get_by_name.py  read_sequence_by_user_id.py
bot_framework/data/: languages.json  phrases.json  roles.json
bot_framework/decorators/: __init__.py  role_checker.py
bot_framework/entities/: __init__.py  bot_callback.py  bot_message.py  bot_user.py  button.py  keyboard.py  parse_mode.py  role_name.py  user.py
bot_framework/flow_management/: __init__.py  flow_registry.py
bot_framework/flows/: __init__.py
bot_framework/language_management/: __init__.py
bot_framework/menus/: __init__.py
bot_framework/migrations/: __init__.py
bot_framework/protocols/: __init__.py  i_bot.py  i_callback_answerer.py  i_callback_handler.py  i_callback_handler_registry.py  i_card_field_formatter.py  i_display_width_calculator.py  i_document_downloader.py  i_document_sender.py  i_ensure_user_exists.py  i_flow_router.py  i_markdown_to_html_converter.py  i_message_core.py  i_message_deleter.py  i_message_handler.py  i_message_handler_registry.py  i_message_replacer.py  i_message_sender.py  i_message_service.py  i_middleware.py  i_next_step_handler_registrar.py  i_notify_replacer.py  i_remaining_time_formatter.py
bot_framework/role_management/: __init__.py
bot_framework/services/: card_field_formatter.py  display_width_calculator.py  remaining_time_formatter.py
bot_framework/step_flow/: __init__.py  _step_flow_router.py  base_step.py  flow.py
bot_framework/telegram/: __init__.py
docs/: index.md
docs/concepts/: architecture.md  flow-lifecycle.md  flow-stack.md  multilingual.md  roles-and-access.md  support-chat.md
docs/examples/: configuration.md  creating-flow.md  handlers.md
docs/reference/: decorators.md  protocols.md
stubs/telebot/: __init__.pyi  apihelper.pyi  async_telebot.pyi  asyncio_filters.pyi  asyncio_handler_backends.pyi  asyncio_helper.pyi  callback_data.pyi  custom_filters.pyi  handler_backends.pyi  service_utils.pyi  util.pyi
tests/: test_facebook_messenger.py  test_postback_handler_registry.py  test_support_topic_manager.py
todos/: 001-send-document-keyboard.yaml  002-download-document.yaml  003-split-ibot-protocol.yaml  004-replace-telebot-with-abstractions.yaml  005-remove-create-forum-topic-duplication.yaml  006-replace-hardcoded-russian-strings.yaml  007-add-set-support-topic-id.yaml  008-fix-fullname-in-mirror-messenger.yaml  009-full-ibot-split.yaml  max-refactoring.yaml
(+331 files in other folders)
