[project]
name = "bot-framework"
version = "0.5.2"
description = "Reusable Telegram bot framework with Clean Architecture"
readme = "README.md"
authors = [
    { name = "Vladimir Sumarokov", email = "sumarokov.vp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.0"]

[project.optional-dependencies]
telegram = ["pytelegrambotapi>=4.29.0"]
postgres = ["psycopg[binary]>=3.2.0", "yoyo-migrations==9.0.0"]
redis = ["redis>=6.0.0"]
all = ["bot-framework[telegram,postgres,redis]"]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "mypy>=1.18.2",
    "pyright>=1.1.406",
    "pytest>=9.0.0",
    "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".import_linter_cache/",
    ".python-version",
    "CLAUDE.md",
    "stubs/",
    "todos/",
]

[tool.hatch.build.targets.wheel]
packages = ["bot_framework"]

[tool.pyright]
venv = ".venv"
venvPath = "."
exclude = ["stubs/", ".venv/"]
reportUnusedVariable = false
reportUnusedImport = false
reportMissingImports = false

[tool.ruff]
exclude = ["stubs/"]
lint.select = [
  "F",   # flake8
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "B",   # flake8-bugbear
  "N",   # PEP 8 naming conventions
  "C",   # McCabe complexity
  "T",   # Print found todos
  "UP",  # upgrade syntax
  "ANN", # type annotations
  "S",   # security issues
  "DTZ", # datetime timezone issues
]

lint.ignore = [
  "ANN204", # Missing type annotation for special methods
  "E501",   # line too long
  "C901",   # function too complex
  "ANN401", # Any type
  "W293",   # blank line contains whitespace
  "W291",   # trailing whitespace
]

[tool.ruff.lint.per-file-ignores]
"test*" = [
  "S101",   # disable security issues for tests
  "ANN201", # Missing return type
]

[tool.mypy]
mypy_path = "stubs"
exclude = ["stubs/"]
ignore_missing_imports = true
strict = false
disallow_subclassing_any = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true

# =============================================================================
# Import Linter
# =============================================================================
[tool.importlinter]
root_packages = ["bot_framework"]

[[tool.importlinter.contracts]]
name = "bot_framework layers"
type = "layers"
layers = [
    "bot_framework.app",
    "bot_framework.features",
    "bot_framework.platform",
    "bot_framework.domain",
    "bot_framework.core",
]
